stuff for final 6.1.6